--- a/.dockerignore
+++ b/.dockerignore
@@ -12,6 +12,7 @@ env.*
 # To prevent storing dev/temporary container data
 *.csv
 /tmp/*
+/uploads/*
 
 
 # Created by https://www.gitignore.io/api/node,macos,windows,visualstudiocode
