--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -26,11 +26,13 @@
   "homepage": "https://github.com/gedanziger/norest-kyc-be#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "chai": "^4.1.2",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "gridfs-stream": "^1.1.1",
+    "mocha": "^5.2.0",
     "mongoose": "^5.1.2",
     "nocache": "^2.0.0",
     "nodemon": "^1.17.4",
