--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "norest kyc backend",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js",
-    "test": "mocha"
+    "start": "nodemon server/app.js",
+    "test": "NODE_ENV=test mocha --reporter spec test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
@@ -36,6 +37,7 @@
     "mongoose": "^5.1.2",
     "nocache": "^2.0.0",
     "nodemon": "^1.17.4",
+    "request": "^2.87.0",
     "socket.io": "^2.1.1"
   }
 }
