--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "gridfs-stream": "^1.1.1",
+    "jsonwebtoken": "^8.2.1",
     "mocha": "^5.2.0",
     "mongoose": "^5.1.2",
     "nocache": "^2.0.0",
+    "nodemailer": "^4.6.5",
     "nodemon": "^1.17.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "request": "^2.87.0",
     "socket.io": "^2.1.1"
   }
