--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "chai-http": "^4.0.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
+    "countryjs": "^1.8.0",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.2.1",
+    "lodash": "^4.17.10",
     "mocha": "^5.2.0",
     "mongoose": "^5.1.2",
     "nocache": "^2.0.0",
