--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
+    "mailcomposer": "^4.0.2",
+    "mailgun-js": "^0.18.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.1.2",
     "nocache": "^2.0.0",
