--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "countryjs": "^1.8.0",
+    "dateformat": "^3.0.3",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "gridfs-stream": "^1.1.1",
