--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nodemon": "^1.17.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "querystring": "^0.2.0",
     "request": "^2.87.0",
     "socket.io": "^2.1.1",
     "uuid": "^3.3.2"
