--- a/package.json
+++ b/package.json
@@ -50,5 +50,19 @@
     "request": "^2.87.0",
     "socket.io": "^2.1.1",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "babel-eslint": "6.1.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "chai": "^4.1.2",
+    "eslint": "2.11.1",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-import-resolver-babel-module": "^3.0.0",
+    "eslint-plugin-import": "1.8.1",
+    "eslint-plugin-jsx-a11y": "1.3.0",
+    "eslint-plugin-react": "5.2.2",
+    "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.12.0",
+    "nodemon": "^1.11.0"
   }
 }
