--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "countryjs": "^1.8.0",
     "dateformat": "^3.0.3",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "gridfs-stream": "^1.1.1",
