--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "express-fileupload": "^0.4.0",
     "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.2.1",
-    "lodash": "^4.17.10",
+    "lodash": ">=4.17.11",
     "mailcomposer": "^4.0.2",
     "mailgun-js": "^0.18.0",
     "mocha": "^5.2.0",
     "mongoose": "^5.1.2",
+    "mpath": ">=0.5.1",
     "nocache": "^2.0.0",
     "nodemon": "^1.17.4",
     "passport": "^0.4.0",
