--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ typings/
 .yarn-integrity
 
 # dotenv environment variables file
-# .env
+.env
 # .envrc
 /**/config/development.js
 /**/config/production.js
