--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
   "homepage": "https://github.com/gedanziger/norest-kyc-be#readme",
   "dependencies": {
     "base64-img": "^1.0.4",
-    "bcrypt-nodejs": "0.0.3",
+    "bcrypt-nodejs": "^0.0.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "countryjs": "^1.8.0",
     "dateformat": "^3.0.3",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "gridfs-stream": "^1.1.1",
@@ -54,15 +54,15 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "babel-eslint": "6.1.2",
+    "babel-eslint": "^6.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "chai": "^4.1.2",
-    "eslint": "2.11.1",
-    "eslint-config-airbnb": "9.0.1",
+    "eslint": "^2.11.1",
+    "eslint-config-airbnb": "^9.0.1",
     "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-plugin-import": "1.8.1",
-    "eslint-plugin-jsx-a11y": "1.3.0",
-    "eslint-plugin-react": "5.2.2",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.3.0",
+    "eslint-plugin-react": "^5.2.2",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.12.0",
     "nodemon": "^1.11.0"
