--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/app.js",
   "scripts": {
     "start": "nodemon src/app.js",
+    "eslint": "node_modules/.bin/eslint .",
+    "eslint:fix": "yarn eslint --fix",
     "test": "NODE_ENV=test mocha ./src/**/*.spec.js test/**/*.js"
   },
   "repository": {
@@ -27,6 +29,8 @@
   "dependencies": {
     "base64-img": "^1.0.4",
     "bcrypt-nodejs": "^0.0.3",
+    "bee-queue": "^1.2.2",
+    "body-parser": "^1.19.0",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "cookie-parser": "^1.4.3",
@@ -44,6 +48,7 @@
     "mailcomposer": "^4.0.2",
     "mailgun-js": "^0.18.0",
     "mocha": "^5.2.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.1.2",
     "mpath": ">=0.5.1",
     "nocache": "^2.0.0",
@@ -56,17 +61,17 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "10.0.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "chai": "^4.1.2",
-    "eslint": ">=4.18.2",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.3.0",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint": "5.14.1",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-import-resolver-babel-module": "^5.0.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.12.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.18.10"
   }
 }
